--- a/semester5/index.html
+++ b/semester5/index.html
@@ -130,6 +130,12 @@ function removememe() {
     </div>
     <div id="body">
       <div class="heading_name">Software technology</div>
+      <hr>
+      <marquee behavior="" direction="">
+        <a href="#end-sem">Important Questions For End sem</a>
+      </marquee>
+      <hr>
+
       <div id="watermark">@Debuggers</div>
       <div id="up">
         <a href="#" id="goToTopButton" class="go-to-top-button">
@@ -1407,7 +1413,7 @@ Stakeholder Satisfaction: Ensures transparency and alignment with expectations. 
 </ul>
 
 
-<hr>
+<hr id="end-sem">
 <center>
   <h2><Strong>Important questions for End semester Examination .</Strong></h2>
 </center>
