--- a/semester5/formal.html
+++ b/semester5/formal.html
@@ -731,7 +731,8 @@ Where:
             <li>If all symbols are matched and no unprocessed symbols remain, accept the string.</li>
         </ul>
     </p>
-
+    <br>
+    <img src="../assets/images/formal/auto_tuni1.png" alt="" id="img1">
     <h3>Example 2: Turing Machine for Binary Addition</h3>
     <p><strong>Problem:</strong> Design a Turing Machine that adds two binary numbers represented on the tape, separated by a blank.</p>
     <p><strong>Solution:</strong>
