--- a/semester5/comp_netw.html
+++ b/semester5/comp_netw.html
@@ -83,6 +83,11 @@
   
     <div id="body">
       <div class="heading_name">Computer Networks</div>
+      <hr>
+        <marquee behavior="" direction="">
+            <a href="#imp">Important Questions for End sem</a>
+        </marquee>
+      <hr>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
@@ -343,7 +348,7 @@
       <li>Includes measures like encryption, authentication, firewalls, and intrusion detection to protect data.</li>
   </ul>
       <hr>
- <center> Some Important Questions</center>
+ <center id="imp"> Some Important Questions</center>
   <hr>
   <h3>10-Mark Questions with Answers</h3>
     <h4>1. Explain the operation of CDMA (Code Division Multiple Access) and its advantages.</h4>
