--- a/semester5/formal.html
+++ b/semester5/formal.html
@@ -869,7 +869,8 @@ Important Questions : Numericals
 <img src="../assets/images/formal/img_endsem/img26.jpg" alt="" id="img1"><br>
 <img src="../assets/images/formal/img_endsem/img29.jpg" alt="" id="img1"><br>
 <img src="../assets/images/formal/img_endsem/img32.jpg" alt="" id="img1"><br>
-
+<img src="../assets/images/formal/img_endsem/img_tur1.jpg" alt="" id="img1"><br>
+<img src="../assets/images/formal/img_endsem/img_tur2.jpg" alt="" id="img1"><br>
 
         </body>
 </html>
