--- a/semester5/ai.html
+++ b/semester5/ai.html
@@ -84,7 +84,7 @@
     <div id="body">
       <div class="heading_name">Artificial Intelligence</div>
       <hr>
-      <marquee behavior="" direction=""><a href="#mid-sem">Mid sem Questions paper</a></marquee>
+      <marquee behavior="" direction=""><a href="#mid-sem">Important Numerical Questions with solution</a></marquee>
       <hr>
       <div id="watermark">@Debuggers</div>
 
@@ -624,7 +624,32 @@ A, B, D
   </div>
 
   <hr id="mid-sem">
+<center><strong>Important Numericals with Solutions</strong></center>
+  <hr>
+  <center>
+  <img src="../assets/images/ai/sol/img1.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img5.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img8.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img11.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img14.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img17.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img20.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img23.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img26.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img29.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img32.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img36.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img39.jpg" alt="" id="img1"><br>
+  <img src="../assets/images/ai/sol/img42.jpg" alt="" id="img1">
+
+
+<hr>
+<center><strong>Mid Sem Question Paper</strong></center>
+<hr>
+
+
 <img src="../assets/images/ai/ai_q1.jpg" alt="" id="img1"><br>
 <img src="../assets/images/ai/ai_q2.jpg" alt="" id="img1">
+</center>
   <hr>
 </html>
