--- a/semester5/index.html
+++ b/semester5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>Helpdesk</title>
 </head>
    
@@ -84,7 +84,13 @@ function removememe() {
       <a href="../semester5/cloud.html">Cloud Computing</a>
 
       <h2>semester 6</h2>
-      <a href="#">Comming Soon....</a>
+      <a href="../semester6/index.html">Digital Image</a>
+      <a href="../semester6/Compiler.html">Compiler Design</a>
+      <a href="../semester6/Computational.html">Computational Intell.</a>
+      <a href="../semester6/ds_big_data.html">DS and Big data</a>
+      <a href="../semester6/computer_graphics.html">Computer Graphics</a>
+      <a href="../semester6/python_da.html">Python for DA</a>
+      <a href="../semester6/ds.html">Data Science</a>
      
   </div>
   <div class="semester">semester-5</div>
