--- a/semester5/ml.html
+++ b/semester5/ml.html
@@ -50,7 +50,13 @@
       <a href="../semester5/cloud.html">Cloud Computing</a>
 
       <h2>semester 6</h2>
-      <a href="#">Comming Soon....</a>
+      <a href="../semester6/index.html">Digital Image</a>
+      <a href="../semester6/Compiler.html">Compiler Design</a>
+      <a href="../semester6/Computational.html">Computational Intell.</a>
+      <a href="../semester6/ds_big_data.html">DS and Big data</a>
+      <a href="../semester6/computer_graphics.html">Computer Graphics</a>
+      <a href="../semester6/python_da.html">Python for DA</a>
+      <a href="../semester6/ds.html">Data Science</a>
      
   </div>
   <div class="semester">semester-5</div>
