--- a/semester6/computer_graphics.html
+++ b/semester6/computer_graphics.html
@@ -89,6 +89,90 @@
   
     <div id="body">
       <div class="heading_name">Computer Graphics</div>
-      
-        </body>
+      <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resolution and Computer Graphics</title>
+</head>
+<body>
+  <h3>What is Resolution in Brief?</h3>
+  <p>Resolution refers to the number of pixels displayed on a screen or image. It is usually represented as width × height (e.g., 1920 × 1080). Higher resolution means more detail and clarity.</p>
+
+  <h3>What is Aspect Ratio and How is it Found?</h3>
+  <p>Aspect ratio is the proportional relationship between the width and height of a screen or image. It is found by dividing the width by the height (e.g., 16:9, 4:3).</p>
+
+  <h3>What is Pixel & Resolution in Computer Graphics?</h3>
+  <p>A pixel (picture element) is the smallest unit of a digital image or display. Resolution in computer graphics determines the quality of an image based on the number of pixels it contains.</p>
+
+  <h3>Types of Resolution and Their Description</h3>
+  <ul>
+      <li><strong>Spatial Resolution:</strong> Refers to the number of pixels in an image.</li>
+      <li><strong>Temporal Resolution:</strong> Deals with the frame rate in videos (frames per second).</li>
+      <li><strong>Spectral Resolution:</strong> Defines the ability to distinguish different wavelengths in an image.</li>
+      <li><strong>Bit Depth Resolution:</strong> Represents the number of bits per pixel that define color depth.</li>
+  </ul>
+
+  <h3>What is DPI?</h3>
+  <p>Dots Per Inch (DPI) is a measurement of printer resolution, indicating how many ink dots a printer can place in a linear inch.</p>
+
+  <h3>Types of Computer Graphics</h3>
+  <ul>
+      <li><strong>Raster Graphics:</strong> Composed of pixels, used in images and photos.</li>
+      <li><strong>Vector Graphics:</strong> Made of paths and shapes, used in logos and illustrations.</li>
+      <li><strong>3D Graphics:</strong> Represent three-dimensional objects in digital form.</li>
+      <li><strong>Computer-Aided Design (CAD):</strong> Used in engineering and architecture for precision drawings.</li>
+  </ul>
+
+  <h3>What is CRT and its Components?</h3>
+  <p>Cathode Ray Tube (CRT) is a display device that uses electron beams to create images on a phosphorescent screen. Its main components include:</p>
+  <ul>
+      <li>Electron Gun</li>
+      <li>Deflection System</li>
+      <li>Phosphor-coated Screen</li>
+      <li>Control Electrode</li>
+  </ul>
+
+  <h3>Operation of CRT</h3>
+  <p>The electron gun emits electrons, which are guided by the deflection system to create an image on the screen by illuminating phosphor dots.</p>
+
+  <h3>What is Random Scan and Raster Scan?</h3>
+  <p>Random Scan draws images line-by-line as vector graphics, while Raster Scan processes images as a grid of pixels.</p>
+
+  <h3>What is a Scan Line?</h3>
+  <p>A scan line is a horizontal row of pixels displayed on a screen in raster scanning.</p>
+
+  <h3>Who Holds the Picture Intensity Value - Refresh Buffer or Frame Buffer?</h3>
+  <p>The Frame Buffer (or Refresh Buffer) holds the picture intensity values, storing the pixel data for display.</p>
+
+  <h3>What is Scan Light?</h3>
+  <p>Scan light refers to the movement of an electron beam across the screen in CRT displays.</p>
+
+  <h3>Applications of Computer Graphics</h3>
+  <ul>
+      <li>Entertainment (Movies, Games)</li>
+      <li>Medical Imaging</li>
+      <li>Simulation and Training</li>
+      <li>Scientific Visualization</li>
+      <li>Computer-Aided Design (CAD)</li>
+  </ul>
+
+  <h3>What is a Digital and Analog System?</h3>
+  <p>Digital systems use discrete signals (0s and 1s) for processing, while Analog systems use continuous signals for data representation.</p>
+
+  <h3>What are Voxels?</h3>
+  <p>Voxels (volumetric pixels) are the 3D equivalent of pixels, representing a value on a regular grid in three-dimensional space.</p>
+
+  <h3>What are Different 3D Viewing Devices?</h3>
+  <ul>
+      <li>Head-Mounted Displays (HMDs)</li>
+      <li>Stereoscopic Displays</li>
+      <li>Autostereoscopic Displays</li>
+      <li>Holographic Displays</li>
+  </ul>
+
+  <h3>What is a Stereoscopic Virtual Reality System?</h3>
+  <p>A stereoscopic VR system uses two slightly different images for each eye to create a depth perception effect, enhancing the immersive experience.</p>
+</body>
 </html>
