--- a/semester6/Compiler.html
+++ b/semester6/Compiler.html
@@ -101,6 +101,23 @@
         <p><b>Assembler:</b> An assembler is a program that converts low-level assembly language code into machine language. It is used to bridge the gap between hardware instructions and human-readable assembly code. Assemblers are essential for system-level programming and hardware programming.</p>
         <p><b>Example:</b> NASM (Netwide Assembler), MASM (Microsoft Macro Assembler).</p>
     </ans>
+    <mark><que>2. What is a Language Processing System?</que></mark>
+    <ans>
+        <p>A Language Processing System (LPS) refers to the set of tools and processes that convert high-level programming code into an executable machine code format. It consists of several stages:</p>
+        <ul>
+            <li><b>Preprocessor:</b> Handles directives like <code>#include</code> and macro substitution.</li>
+            <li><b>Compiler:</b> Translates high-level code into an intermediate or assembly representation.</li>
+            <li><b>Assembler:</b> Converts assembly code into object code (binary code).</li>
+            <li><b>Linker:</b> Combines multiple object files and external libraries into a single executable file.</li>
+        </ul>
+        <p><b>Diagram:</b></p>
+        <pre>
+        Source Code --> Preprocessor --> Compiler --> Assembler --> Linker --> Executable File
+        </pre>
+    </ans>
+
+    <mark><que>3. What are the Types of Compilers?</que></mark>
+    <ans>
 
         </body>
 </html>
