--- a/semester6/Compiler.html
+++ b/semester6/Compiler.html
@@ -139,5 +139,31 @@
     </ul>
     <p><b>Synthesis Phase:</b> This phase generates optimized machine code from the IR. It includes:</p>
     <ul>
+
+
+      <li><b>Intermediate Code Generation:</b> Produces an intermediate representation like three-address code.</li>
+            <li><b>Code Optimization:</b> Improves performance by reducing unnecessary operations.</li>
+            <li><b>Code Generation:</b> Translates IR into machine-level instructions.</li>
+        </ul>
+        <p><b>Diagram:</b></p>
+        <pre>
+        Source Code --> [Front-End] --> Intermediate Representation --> [Back-End] --> Machine Code
+        </pre>
+    </ans>
+
+    <mark><que>5. What are Tokens and Lexemes?</que></mark>
+    <ans>
+        <p><b>Tokens:</b> Tokens are the smallest syntactic units of a programming language. These include keywords, operators, identifiers, literals, etc.</p>
+        <p><b>Lexeme:</b> A lexeme is an instance of a token in the source code. For example, in the statement <code>int x = 10;</code>, "int" is a lexeme of the token type "keyword".</p>
+    </ans>
+
+    <mark><que>6. Explain the Role of a Lexical Analyzer.</que></mark>
+    <ans>
+        <p>The lexical analyzer, also known as the scanner, is responsible for reading the source code and breaking it into tokens. It also removes comments, whitespace, and invalid characters.</p>
+        <p><b>Diagram:</b></p>
+        <pre>
+
+
+          
         </body>
 </html>
