--- a/semester6/Compiler.html
+++ b/semester6/Compiler.html
@@ -163,7 +163,22 @@
         <p><b>Diagram:</b></p>
         <pre>
 
+          <mark><que>7. What is the Role of a Parser?</que></mark>
+          <ans>
+              <p>A parser checks whether the token stream adheres to the grammatical rules of the programming language. It builds a hierarchical structure called a "parse tree." There are two main types of parsing:</p>
+              <ul>
+                  <li><b>Top-Down Parsing:</b> Starts from the root of the tree and works towards the leaves.</li>
+                  <li><b>Bottom-Up Parsing:</b> Starts from the leaves and works towards the root.</li>
+              </ul>
+              <p><b>Diagram:</b> Parse Tree Example for <code>E → E + T</code></p>
+              <pre>
+                     E
+                    / \
+                   E   T
+                  / \
+                 T   +
+              </pre>
+          </ans>
 
-          
         </body>
 </html>
