--- a/semester6/Computational.html
+++ b/semester6/Computational.html
@@ -90,5 +90,20 @@
     <div id="body">
       <div class="heading_name">Computational Intelligence</div>
       
+
+      <mark><que>1. What is Soft Computing?</que></mark>
+      <ans>
+          <p>Soft computing is a branch of computational intelligence that mimics human decision-making capabilities and reasoning. Unlike hard computing, which relies on precise and exact solutions, soft computing uses approximate reasoning and uncertainty handling to find flexible and adaptable solutions for complex real-world problems.</p>
+          <ul>
+              <li><b>Key Characteristics:</b></li>
+              <ul>
+                  <li>Tolerance for imprecision.</li>
+                  <li>Ability to handle non-linearity.</li>
+                  <li>Works well in scenarios where no exact solution exists.</li>
+              </ul>
+              <li><b>Examples:</b> Pattern recognition (e.g., facial recognition), predictive modeling (e.g., weather forecasting).</li>
+          </ul>
+          <p>Soft computing relies on interdisciplinary approaches, integrating methodologies like fuzzy logic, neural networks, and genetic algorithms to simulate human intelligence. These methods empower machines to work in uncertain and imprecise environments effectively.</p>
+      </ans>
         </body>
 </html>
